fix wrappings

--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,18 @@
   padding-top: 62px;
   padding-bottom: 68px;
 
+  &__inner {
+    display: block;
+  }
+
   &__main {
     display: flex;
     justify-content: flex-start;
+    flex-direction: column;
+
+    @media (min-width: 992px) {
+      flex-direction: row;
+    }
   }
 
   &__bottom {
@@ -36,6 +45,10 @@
   align-items: center;
   justify-content: center;
 
+  > div {
+    max-width: 100%;
+  }
+
   a {
     text-decoration: none;
   }
@@ -43,13 +56,47 @@
   @media (min-width: 992px) {
     margin-right: 71px;
   }
+
+  &__title {
+
+    @media (min-width: 992px) {
+      margin-right: 0;
+    }
+  }
+}
+
+.nav-wrapper {
+  max-width: 100%;
+
+  @media (min-width: 992px) {
+    display: block;
+    min-width: 0;
+  }
+}
+
+.logo + .nav-wrapper .nav-list {
+
+  @media (min-width: 992px) {
+    justify-content: flex-start;
+  }
 }
 
 .nav {
   align-items: flex-end;
   min-height: 0;
 
+  @media (min-width: 992px) {
+    display: flex;
+    justify-content: flex-start;
+  }
+
   &-list {
+
+    @media (min-width: 992px) {
+      justify-content: flex-start;
+      min-width: 0;
+    }
+
     &__link {
       opacity: 0.6;
       transition: opacity 0.2s ease-in, color 0.2s ease-in;
@@ -64,16 +111,11 @@
     &__item {
       margin-left: 22.5px;
       margin-right: 22.5px;
+      max-width: 100%;
+
+      @media (min-width: 992px) {
+        min-width: 0;
+      }
     }
-  }
-}
-
-@media (max-width: 992px) {
-  .footer__main {
-    display: block;
-  }
-
-  .logo__title {
-    margin-right: 0;
   }
 }
